--- a/youtubeLikeSample0001/youtubeLikeSample0001/contentsCollectionViewCell.xib
+++ b/youtubeLikeSample0001/youtubeLikeSample0001/contentsCollectionViewCell.xib
@@ -13,27 +13,38 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="contentsCollectionViewCell" id="gTV-IL-0wX" customClass="contentsCollectionViewCell" customModule="youtubeLikeSample0001" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="287"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="287"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lon-Ma-YFV">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="287"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t0p-hw-0Ac">
-                                <rect key="frame" x="5" y="5" width="365" height="190"/>
+                                <rect key="frame" x="5" y="5" width="365" height="277"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="faP-ti-qLd">
-                                        <rect key="frame" x="0.0" y="0.0" width="365" height="190"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="365" height="277"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wRe-Ij-FNe">
-                                                <rect key="frame" x="0.0" y="0.0" width="365" height="113"/>
-                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="365" height="200"/>
+                                                <subviews>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uTR-Lx-bAR">
+                                                        <rect key="frame" x="0.0" y="0.0" width="365" height="200"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="uTR-Lx-bAR" firstAttribute="leading" secondItem="wRe-Ij-FNe" secondAttribute="leading" id="1m0-y5-9Hh"/>
+                                                    <constraint firstAttribute="trailing" secondItem="uTR-Lx-bAR" secondAttribute="trailing" id="5Wd-VS-I2X"/>
+                                                    <constraint firstItem="uTR-Lx-bAR" firstAttribute="top" secondItem="wRe-Ij-FNe" secondAttribute="top" id="pQj-s7-eKr"/>
+                                                    <constraint firstAttribute="bottom" secondItem="uTR-Lx-bAR" secondAttribute="bottom" id="s4X-cR-fMG"/>
+                                                </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Re1-Tj-f2B">
-                                                <rect key="frame" x="0.0" y="118" width="365" height="72"/>
+                                                <rect key="frame" x="0.0" y="205" width="365" height="72"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8Ow-8K-4El">
                                                         <rect key="frame" x="0.0" y="0.0" width="365" height="72"/>
@@ -41,7 +52,7 @@
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ic-Z3-Ywb">
                                                                 <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Mp-iY-tnj">
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Mp-iY-tnj">
                                                                         <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
                                                                     </imageView>
                                                                 </subviews>
@@ -63,11 +74,39 @@
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C0n-kQ-pVj">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="288" height="33.5"/>
-                                                                                <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                <subviews>
+                                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p31-Ke-36I">
+                                                                                        <rect key="frame" x="0.0" y="0.0" width="288" height="33.5"/>
+                                                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                                                        <nil key="textColor"/>
+                                                                                        <nil key="highlightedColor"/>
+                                                                                    </label>
+                                                                                </subviews>
+                                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                <constraints>
+                                                                                    <constraint firstAttribute="trailing" secondItem="p31-Ke-36I" secondAttribute="trailing" id="4PE-f9-AD5"/>
+                                                                                    <constraint firstAttribute="bottom" secondItem="p31-Ke-36I" secondAttribute="bottom" id="ExC-Te-Sdq"/>
+                                                                                    <constraint firstItem="p31-Ke-36I" firstAttribute="top" secondItem="C0n-kQ-pVj" secondAttribute="top" id="Q0Y-CA-tO7"/>
+                                                                                    <constraint firstItem="p31-Ke-36I" firstAttribute="leading" secondItem="C0n-kQ-pVj" secondAttribute="leading" id="Q0v-px-7Op"/>
+                                                                                </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KDg-V6-SJa">
                                                                                 <rect key="frame" x="0.0" y="38.5" width="288" height="33.5"/>
-                                                                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                <subviews>
+                                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vO4-9d-Pwo">
+                                                                                        <rect key="frame" x="0.0" y="0.0" width="288" height="33.5"/>
+                                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                        <nil key="highlightedColor"/>
+                                                                                    </label>
+                                                                                </subviews>
+                                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                <constraints>
+                                                                                    <constraint firstAttribute="trailing" secondItem="vO4-9d-Pwo" secondAttribute="trailing" id="2uq-tQ-AJU"/>
+                                                                                    <constraint firstItem="vO4-9d-Pwo" firstAttribute="leading" secondItem="KDg-V6-SJa" secondAttribute="leading" id="bV4-S3-G7p"/>
+                                                                                    <constraint firstAttribute="bottom" secondItem="vO4-9d-Pwo" secondAttribute="bottom" id="gRU-6c-egd"/>
+                                                                                    <constraint firstItem="vO4-9d-Pwo" firstAttribute="top" secondItem="KDg-V6-SJa" secondAttribute="top" id="vve-tF-SNx"/>
+                                                                                </constraints>
                                                                             </view>
                                                                         </subviews>
                                                                     </stackView>
@@ -102,11 +141,22 @@
                                     <constraint firstAttribute="bottom" secondItem="faP-ti-qLd" secondAttribute="bottom" id="l49-kx-bui"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g7V-bt-lJ9">
+                                <rect key="frame" x="0.0" y="286" width="375" height="1"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="iH9-GM-u8J"/>
+                                    <constraint firstAttribute="width" constant="375" id="xP2-Lv-eAI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="g7V-bt-lJ9" secondAttribute="trailing" id="MIu-0v-EsX"/>
                             <constraint firstAttribute="trailing" secondItem="t0p-hw-0Ac" secondAttribute="trailing" constant="5" id="SJ6-9q-0fN"/>
                             <constraint firstItem="t0p-hw-0Ac" firstAttribute="leading" secondItem="Lon-Ma-YFV" secondAttribute="leading" constant="5" id="Wg1-VH-GSm"/>
+                            <constraint firstItem="g7V-bt-lJ9" firstAttribute="leading" secondItem="Lon-Ma-YFV" secondAttribute="leading" id="hNl-3t-3T5"/>
+                            <constraint firstAttribute="bottom" secondItem="g7V-bt-lJ9" secondAttribute="bottom" id="mHT-WA-hdE"/>
                             <constraint firstAttribute="bottom" secondItem="t0p-hw-0Ac" secondAttribute="bottom" constant="5" id="nkv-tb-NZE"/>
                             <constraint firstItem="t0p-hw-0Ac" firstAttribute="top" secondItem="Lon-Ma-YFV" secondAttribute="top" constant="5" id="xzC-Pm-r2P"/>
                         </constraints>
@@ -121,6 +171,12 @@
                 <constraint firstAttribute="bottom" secondItem="Lon-Ma-YFV" secondAttribute="bottom" id="zhV-hQ-mUb"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <connections>
+                <outlet property="movieDescriptionLabel" destination="vO4-9d-Pwo" id="3iw-H0-QEU"/>
+                <outlet property="movieTitleLabel" destination="p31-Ke-36I" id="43L-rg-olZ"/>
+                <outlet property="presenterIdonImage" destination="2Mp-iY-tnj" id="U2P-xx-9nY"/>
+                <outlet property="thumnailImage" destination="uTR-Lx-bAR" id="pCV-8s-hIO"/>
+            </connections>
             <point key="canvasLocation" x="53.600000000000001" y="48.575712143928037"/>
         </collectionViewCell>
     </objects>
